<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:visible="false"
       android:icon="@drawable/main_ic_favorite"
       android:orderInCategory="100"
       app:showAsAction="always"
       android:id="@+id/menu_rate_us"
       android:title="@string/main_menu_rate_us" />

   <item
       android:orderInCategory="50"
       app:showAsAction="never"
       android:id="@+id/menu_sort"
       android:title="@string/menu_sort" />
   <item
       android:orderInCategory="100"
       app:showAsAction="never"
       android:id="@+id/menu_tile"
       android:title="@string/menu_tile" />
   <item
       android:orderInCategory="300"
       app:showAsAction="never"
       android:id="@+id/menu_list"
       android:title="@string/menu_list" />
</menu>