<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_clear_in_app_bar"
        >
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_marginLeft="16dp"
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:text="Liska Widget"


            />
        <ImageView
            android:id="@+id/save_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_check"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/open_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingTop="16dip"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd"
        android:paddingBottom="16dip">

        <TextView
            android:id="@+id/open_list_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:text="@string/open_list"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/open_list_current_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/open_list_title_tv"
            android:layout_alignStart="@id/open_list_title_tv"
            android:maxLines="1"
            tools:text="Какой то список"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/name_shortcut_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingTop="16dip"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd"
        android:paddingBottom="16dip">

        <TextView
            android:id="@+id/name_shortcut_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:text="@string/widget_name_title_configure"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/name_shortcut_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_shortcut_title_tv"
            android:layout_alignStart="@id/name_shortcut_title_tv"
            android:maxLines="1"
            tools:text="Какой то список"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_is_display_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingTop="16dip"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd"
        android:paddingBottom="16dip">

        <TextView
            android:id="@+id/icon_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentStart="true"

            android:layout_toRightOf="@id/is_display_icon"
            android:text="@string/icon_setting"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <Switch
            android:checked="false"
            android:id="@+id/is_display_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/theme_widget_text_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingTop="16dip"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd"
        android:paddingBottom="16dip">

        <TextView
            android:id="@+id/color_text_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:text="@string/theme_widget"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/theme_widget_current_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/color_text_title_tv"
            android:layout_alignStart="@id/color_text_title_tv"
            android:maxLines="1"
            tools:text="Светлая"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>
</LinearLayout>